objects/Overview_Properties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Category_Name__c</fullName>
        <label>Category Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Id__c</fullName>
        <label>Report Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <label>Report Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Status_Product_Line_Name__c</fullName>
        <label>Stage / Status / Product Line Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Overview Properties</label>
</CustomObject>